# cpp-interface-osqp

./: CMakeLists.txt  README.md
debian/: changelog  control  rules
include/dqrobotics/solvers/: DQ_OSQPSolver.h
osqp/: CMakeLists.txt  main.cpp  osqp_example.cpp  osqp_smartPointers.cpp
